<resources>
    <string name="app_name">Bttendance</string>
    <string name="app_name_capital">BTTENDANCE</string>
    <string name="hello_">Hello!</string>
    <string name="welcome_to_bttendance">Welcome to Bttendance</string>
    <string name="drawer_open">Menu Open</string>
    <string name="drawer_close">Menu Close</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">"Password"</string>
    <string name="password_at_least">"Password (at least 6 characters)"</string>
    <string name="by_tapping_i_agree_to_the">"By tapping \"Sign up\" above, you are agreeing to the "</string>
    <string name="terms_of_service">"Terms of Service"</string>
    <string name="privacy_policy">"Privacy Policy"</string>
    <string name="or_e_mail">"or Email"</string>
    <string name="forgot_password_underline">"<u>Forgot password?</u>"</string>
    <string name="log_in">"Log In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="who_are_you">"Who are you?"</string>
    <string name="please_choose_carefully">"Please choose carefully"</string>
    <string name="professor">"Professor"</string>
    <string name="student">"Student"</string>
    <string name="professor_capital">"PROFESSOR"</string>
    <string name="student_capital">"STUDENT"</string>
    <string name="i_am_a_student_proceed">"I am a student, proceed"</string>
    <string name="cancel">"Cancel"</string>
    <string name="are_you_student">"Are You Student?"</string>
    <string name="enter_serial">"Enter Serial"</string>
    <string name="serial">"Serial"</string>
    <string name="enter">"Enter"</string>
    <string name="request_serial">"Request Serial"</string>
    <string name="request_serial_underline">"<u>Request Serial</u>"</string>
    <string name="please_press_back_button_again_to_exit_">"Please press Back button again to exit."</string>
    <string name="validated">"Validated"</string>
    <string name="wrong_serial">"Wrong Serial"</string>
    <string name="feed">"Feed"</string>
    <string name="courses">"Courses"</string>
    <string name="course">"Course"</string>
    <string name="profile">"Profile"</string>
    <string name="prof_">"Prof.\u0020"</string>
    <string name="email_">"Email\u0020"</string>
    <string name="title">"Title"</string>
    <string name="number">"Course ID"</string>
    <string name="school">"School"</string>
    <string name="create_course">"Create Course"</string>
    <string name="forgot_password">"Forgot Password"</string>
    <string name="attend_course">"Attend Course"</string>
    <string name="choose_school">"Choose School"</string>
    <string name="confrim">"Confirm"</string>
    <string name="ok">"OK"</string>
    <string name="on_the_anvil">"On the anvil"</string>
    <string name="attendance_check_has_been_canceled">"Attendance check has been canceled"</string>
    <string name="attendance_has_been_checked">"%s attendance has been checked"</string>
    <string name="attendance_check">"Attendance check"</string>
    <string name="do_you_want_to_start_attendance_check">"Do you want to start attendance check?"</string>
    <string name="attendance_checking_is_in_progress">"Attendance checking is in progress"</string>
    <string name="turn_on_your_bluetooth_settings">"Attendance Checking is in progress. Turn on your bluetooth to enhance your accuracy in attendance checking."</string>
    <string name="do_you_want_to_approve_attendance">Do you want to approve %s\'s Attendance?</string>
    <string name="turn_on_bt_title">"Turn on Bluetooth"</string>
    <string name="turn_on_bt_message">"Turn on Bluetooth to enhance your \"Bttendance\" experience."</string>
    <string name="turn_on_gps_title">"Improve location accuracy"</string>
    <string name="turn_on_gps_message">"Turn on GPS and mobile network location to enhance your \"Bttendance\" experience."</string>
    <string name="edit_cap">EDIT</string>
    <string name="account_type">Account Type</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notice">Notice</string>
    <string name="grade">Grade</string>
    <string name="ta">TA</string>
    <string name="create_notice">Create Notice</string>
    <string name="post">Post</string>
    <string name="to_">To. %s</string>
    <string name="app_version">1.0.0</string>
    <string name="supervising_courses">Supervising Courses</string>
    <string name="attending_courses">Attending Courses</string>
    <string name="refresh">Refresh</string>
    <string name="employed_schools">Employed Schools</string>
    <string name="joinable_schools">Joinable Schools</string>
    <string name="joinable_courses">Joinable Courses</string>
    <string name="enrolled_schools">Enrolled Schools</string>
    <string name="fail_to_request_serial">Fail to request serial</string>
    <string name="serial_has_been_sent">Serial has been sent</string>
    <string name="student_id">Student ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="before_you_join_course_public">Before you join course %s, you need to enter your <b>Student ID</b></string>
    <string name="before_you_join_course_private">Before you join course %s, you need to enter your <b>Phone Number</b></string>
    <string name="empty_course_detail">Lecture Type\nDate and Time\nClass Place</string>
    <string name="add_manager">Add Manager</string>
    <string name="would_you_like_to_add">Would you like to add \"%1$s\" as a manager of course %2$s?</string>
    <string name="is_now_manager_of_course">\"%1$s\" is now a manager of course %2$s.</string>
    <string name="attendance_unchecked_students">Attendance Un-Checked Students</string>
    <string name="attendance_checked_students">Attendance Checked Students</string>
    <string name="plus">Plus</string>
    <string name="email_sent">Email Sent</string>
    <string name="verification_code_for_activating_your_course">Verification code for activating your course has been sent via email.\n%s</string>
    <string name="password_recovery_success">Password Recovery Success</string>
    <string name="password_recovery_has_been_succeeded">Password recovery has been succeeded.\nPlease check your email.\n%s</string>
    <string name="oopps">Ooooppss!</string>
    <string name="too_many_users_are_connecting">Too many users are connecting at the same time, please try again later.</string>
    <string name="unjoin_course">Unjoin Course</string>
    <string name="show_grades">Show Grades</string>
    <string name="export_grades">Export Grades</string>
    <string name="start">Start</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="setting">Setting</string>
    <string name="n_students">%d students</string>
    <string name="n_attendance_rate">%d%% attendance rate</string>
    <string name="n_clickers">%d clickers</string>
    <string name="n_notices">%d notices</string>
    <string name="write_an_announcement">Write an announcement.</string>
    <string name="presentation_page">Presentation#1 Page#11</string>
    <string name="start_clicker">Start Clicker</string>
    <string name="exporting_grades">Exporting Grades</string>
    <string name="exporting_grade_has_been_finished">Exporting Grades has been finished.\nPlease check your email.\n%s</string>
    <string name="unjoining_course">Unjoining Course</string>
    <string name="recovering_password">Recovering Password...</string>
    <string name="loging_in_bttendance">Loging In Bttendance</string>
    <string name="signing_up_bttendance">Signing Up Bttendance</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="no_course">No Course Yet :(</string>
    <string name="press_plus_button">Press \'+\' button\nto create or attend a course.</string>
    <string name="do_you_really_wish_to_unjoin">Do you really wish to unjoin from course %s?</string>
    <string name="do_you_really_wish_to_open">Do you really wish to open course %s?</string>
    <string name="attending_course">Attending Course</string>
    <string name="would_you_like_to" formatted="false">Would you like to attend %s by %s?</string>
    <string name="creating_course">Creating Course</string>
    <string name="no_identity">No Identity</string>
    <string name="lectures">Lectures</string>
    <string name="add_course">Add Course</string>
    <string name="guide">Guide</string>
    <string name="feedback">Feedback</string>
    <string name="clicker_rate_attendance_rate">Clicker rate %1$d%%  Attendance %2$d%%</string>
    <string name="students_read_recent_notice">%1$d/%2$d students have read recent notice</string>
    <string name="unread_notices">%d unread notices</string>
    <string name="clicker_rate_attendance_rate_none">Clicker rate %  Attendance %</string>
    <string name="students_read_recent_notice_none">/ students have read recent notice</string>
    <string name="unread_notices_none"> unread notices</string>
    <string name="menu">Menu</string>
    <string name="clicker_capital">CLICKER</string>
    <string name="institution_capital">INSTITUTION</string>
    <string name="saved_clicker_questions">%d Saved Clicker Questions</string>
    <string name="update_password">Update Password</string>
    <string name="student__">Student - %s</string>
    <string name="closed_lectures">CLOSED LECTURES</string>
    <string name="edit_">Edit %s</string>
    <string name="if_you_turn_off_the_notification">If you turn off the notification, you won\'t be able to receive professor\'s action.</string>
    <string name="attendance">Attendance</string>
    <string name="clicker">Clicker</string>
    <string name="attendance_notification">Attendance Notification</string>
    <string name="clicker_notification">Clicker Notification</string>
    <string name="notice_notification">Notice Notification</string>
    <string name="blog">Blog</string>
    <string name="facebook">Facebook Page</string>
    <string name="summary_on">The preference is on</string>
    <string name="summary_off">The preference is off</string>
    <string name="switch_on">ON</string>
    <string name="switch_off"> </string>
    <string name="next">Next</string>
    <string name="guide_first_welcome">Welcome!</string>
    <string name="guide_first_message">Let me introduce\nhow to user\nBTTENDANCE.</string>
    <string name="see_more">See More</string>
    <string name="guide_poll_message">Check the response of your students\nduring the class by using BTTENDANCE</string>
    <string name="guide_attendance_message">Check your students\' attendance\naccurately and effortlessly\nby using elaborate algorithm.</string>
    <string name="guide_notice_message">Notify important information\nto your students as easy as\nsending a text message.</string>
    <string name="guide_last_start">Let\'s start\nBTTENDANCE</string>
    <string name="identity">Identity</string>
    <string name="updating_password">Updating Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="more_than_six_letters_">more than 6 letters..</string>
    <string name="tutorial">Tutorial</string>
    <string name="institution">Institution</string>
    <string name="please_choose_a_institution">Choose an institution.</string>
    <string name="code">Code</string>
    <string name="enter_your_class_code">Enter your class code.</string>
    <string name="show_guide">Show Guide</string>
    <string name="no_course_guide_info">If you want to know\nmore about BTTENDANCE</string>
    <string name="no_course_add_info">You should create a course (professor)\nor attend a course (student)\nbefore using BTTENDANCE.</string>
    <string name="no_course_guide_title">You have no course yet!</string>
</resources>