<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bttendance_grey"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp">

    <TextView
        android:id="@+id/code_text"
        style="@style/userInfoText"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:text="@string/code" />

    <EditText
        android:id="@+id/code"
        style="@style/userInfoEditText"
        android:layout_alignParentTop="true"
        android:hint="@string/enter_your_class_code"
        android:textColorHint="@color/grey_hex_aa"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/code_text"
        android:inputType="text|textEmailAddress" />

    <View
        android:id="@+id/code_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/code"
        android:layout_marginBottom="15dp"
        android:background="@color/grey_hex_cc" />

    <Button
        android:id="@+id/attend_course"
        style="@style/signInUpButton"
        android:layout_below="@id/code_divider"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/attend_course" />

</RelativeLayout>