<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bttendance_grey"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp">

    <TextView
        android:id="@+id/text_old"
        style="@style/userInfoText"
        android:layout_alignParentTop="true"
        android:text="@string/current_password"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_old"
        style="@style/userInfoEditText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/text_old"
        android:layout_marginLeft="8dp"
        android:inputType="textPassword"
        android:singleLine="true" />

    <View
        android:id="@+id/divider_old"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_old"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <TextView
        android:id="@+id/text_new"
        style="@style/userInfoText"
        android:layout_below="@id/divider_old"
        android:text="@string/new_password"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_new"
        style="@style/userInfoEditText"
        android:layout_below="@id/divider_old"
        android:layout_toRightOf="@id/text_old"
        android:layout_marginLeft="8dp"
        android:hint="@string/more_than_six_letters_"
        android:textColorHint="@color/grey_hex_aa"
        android:inputType="textPassword"
        android:singleLine="true" />

    <View
        android:id="@+id/divider_new"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edit_new"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <Button
        android:id="@+id/save"
        style="@style/signInUpButton"
        android:layout_below="@id/divider_new"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:enabled="false"
        android:text="@string/save" />

</RelativeLayout>