<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bttendance_grey"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/full_name_text"
        style="@style/userInfoText"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:text="@string/title" />

    <EditText
        android:id="@+id/full_name"
        style="@style/userInfoEditText"
        android:layout_alignLeft="@+id/username"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/full_name_text"
        android:inputType="text" />

    <View
        android:id="@+id/full_name_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/full_name"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <TextView
        android:id="@+id/email_text"
        style="@style/userInfoText"
        android:layout_below="@id/full_name_divider"
        android:singleLine="true"
        android:text="@string/number" />

    <EditText
        android:id="@+id/email"
        style="@style/userInfoEditText"
        android:layout_alignLeft="@id/username"
        android:layout_below="@id/full_name_divider"
        android:layout_toRightOf="@id/email_text"
        android:inputType="text|textEmailAddress" />

    <View
        android:id="@+id/email_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/email"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <TextView
        android:id="@+id/username_text"
        style="@style/userInfoText"
        android:layout_below="@id/email_divider"
        android:singleLine="true"
        android:text="@string/school" />

    <EditText
        android:id="@id/username"
        style="@style/userInfoEditText"
        android:layout_below="@id/email_divider"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/username_text"
        android:inputType="text" />

    <View
        android:id="@+id/username_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/username"
        android:layout_marginBottom="10dp"
        android:background="@color/grey_hex_cc" />

    <Button
        android:id="@+id/signup"
        style="@style/signInUpButton"
        android:layout_below="@id/username_divider"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/create_course" />

</RelativeLayout>