<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/guide_last" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="200dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:layout_centerHorizontal="true"
            android:src="@drawable/start_icon"
            android:id="@+id/start_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_icon"
            android:layout_marginTop="30dp"
            android:textColor="@color/bttendance_black"
            android:gravity="center"
            android:textSize="28sp"
            android:lineSpacingExtra="8dp"
            android:text="@string/guide_last_start" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:background="@drawable/bt_cyan_background"
            android:textColor="@color/bttendance_white"
            android:text="@string/create_course"
            android:textSize="18sp"
            android:layout_marginBottom="14dp"
            android:id="@+id/guide_last_bt1" />

        <Button
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:background="@drawable/bt_silver_background"
            android:textColor="@color/bttendance_black"
            android:text="@string/attend_course"
            android:textSize="18sp"
            android:id="@+id/guide_last_bt2" />

    </LinearLayout>

</RelativeLayout>